Adds direct deposit validation - section 8 API-24835 * Adds validataion for direct deposit elements * Updates 526.json schema file and related files to ensure correct validations * Updates rswag docs with update schema * Adds RSpec tests for validations Changes to be committed: 	modified:   modules/claims_api/app/controllers/concerns/claims_api/v2/disability_compensation_validation.rb 	modified:   modules/claims_api/app/swagger/claims_api/v2/dev/swagger.json 	modified:   modules/claims_api/config/schemas/v2/526.json 	modified:   modules/claims_api/config/schemas/v2/request_bodies/disability_compensation/example.json 	modified:   modules/claims_api/config/schemas/v2/request_bodies/disability_compensation/request.json 	modified:   modules/claims_api/spec/fixtures/v2/veterans/disability_compensation/form_526_json_api.json 	modified:   modules/claims_api/spec/requests/v2/veterans/disability_compensation_request_spec.rb 	modified:   spec/support/schemas/claims_api/v2/forms/disability/submission.json
